fixed alignment issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,114 +1,122 @@
 /* styling for footer across all 3 pages */
 
 .footer-span {
-    color: white;
+  color: white;
 }
 
 footer {
-    z-index: 1;
-    bottom: 0;
-    width: 100%;
-    margin-bottom: 3%;
+  bottom: 0;
+  margin-bottom: 3%;
+  width: 100%;
+  z-index: 1;
 }
 
 .container {
-    background-color: white;
-    padding-top: 1%;
+  background-color: white;
+  padding-top: 1%;
 }
 
 body {
-    font-family: 'Franklin Gothic FS Book', 'Franklin Gothic FS Med', 'Arial Narrow', Arial, sans-serif;
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
+  font-family: "Franklin Gothic FS Book", "Franklin Gothic FS Med",
+    "Arial Narrow", Arial, sans-serif;
 }
 
 .commentTxt {
-    font-family: 'Franklin Gothic FS Book', 'Franklin Gothic FS Med', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic FS Book", "Franklin Gothic FS Med",
+    "Arial Narrow", Arial, sans-serif;
 }
 
 /* change the whole image used as the star. Make sure to set starSize in options if not 16px.
 first image is for the 'off' mode */
 .star-rating {
   background-image: url("../assets/img/potatoOff.svg");
-  width: 0;
-  position: relative;
-  display: inline-block;
   background-position: 0 0;
   background-repeat: repeat-x;
+  display: inline-block;
+  position: relative;
+  width: 0;
 }
 
 /* add style for 'on' mode */
 .star-rating .star-value {
   background: url("../assets//img/potatoOn.svg");
-  position: absolute;
-  height: 100%;
   background-repeat: repeat-x;
+  height: 100%;
+  position: absolute;
 }
 
 .theme-palette {
-    background-color: #FFC482;
+  background-color: #ffc482;
 }
 
 .pinkbtn {
-    background-color: #fd8f96;
+  background-color: #fd8f96;
 }
 
 .pinkTxt {
-    color: #fd8f96;
+  color: #fd8f96;
 }
 
 .titles {
-    font-family: 'Neusa Next Pro Compact Medium', Impact, Arial, sans-serif;
+  font-family: "Neusa Next Pro Compact Medium", Impact, Arial, sans-serif;
 }
 
 .titles-secondary {
-    font-family: 'Franklin Gothic FS Book', 'Franklin Gothic FS Med', 'Arial Narrow', Arial, sans-serif;
-    color: #fd8f96;
+  color: #fd8f96;
+  font-family: "Franklin Gothic FS Book", "Franklin Gothic FS Med",
+    "Arial Narrow", Arial, sans-serif;
 }
 
 .navbar {
-    margin-top: 3%;
-    font-family: 'Neusa Next Pro Compact Medium', Impact, Arial, sans-serif;
+  font-family: "Neusa Next Pro Compact Medium", Impact, Arial, sans-serif;
+  margin-top: 3%;
 }
 
 a {
-    color: #fd8f96;
+  color: #fd8f96;
 }
 
 a:hover {
-    color: hotpink;
+  color: hotpink;
 }
 
 .navbar,
 a.navbar:visited {
-    color: #fff;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  color: #fff;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .input,
 .form-input {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 8px 0;
+  padding: 12px 20px;
+  width: 100%;
 }
 
-.form-input{
-  width: 100%
+.form-input {
+  width: 100%;
 }
 
-.login-btn, .signup-btn{
-  background-color: #E29578;
-  color: white
+.login-btn,
+.signup-btn {
+  background-color: #e29578;
+  color: white;
 }
 
 .navbar-brand {
   padding-left: 15px;
 }
 
-#nav-menu{
+#nav-menu {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+#rater {
+  padding-left: 0;
 }
